2011-09-08  Jakub Jelinek  <jakub@redhat.com>

	PR target/50310
	* config/i386/i386.c (ix86_prepare_sse_fp_compare_args): Return
	code early if TARGET_AVX.
	(ix86_expand_fp_vcond): Handle LTGT and UNEQ.

2011-09-06  Martin Jambor  <mjambor@suse.cz>

	Revert
	2011-09-02  Martin Jambor  <mjambor@suse.cz>
        PR middle-end/49886
        * ipa-split.c (split_function): Do not skip any arguments if
        can_change_signature is set or there are function type attributes.

2011-09-05  Georg-Johann Lay  <avr@gjlay.de>

	PR target/50289
	Backport from mainline r178528
	* config/avr/avr.c (sequent_regs_live): Don't recognize sequences
	that contain global register variable.

2011-09-02  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/49886
	* ipa-split.c (split_function): Do not skip any arguments if
	can_change_signature is set or there are function type attributes.

2011-09-01  Ira Rosen  <ira.rosen@linaro.org>

	PR tree-optimization/50178
	* tree-vect-stmts.c (vectorizable_call): Update the related
	pattern statement before deleting the original call.
	(vect_transform_stmt): Don't expect the related pattern statement
	to match the original statement after transformation.

2011-08-29  Richard Guenther  <rguenther@suse.de>

	PR middle-end/50116
	* varasm.c (decode_addr_const): Handle MEM_REF[&X, OFF].

2011-08-27  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (vec_extract_lo_<mode>): Prevent both
	operands in memory.
	(vec_extract_lo_v16hi): Ditto.
	(*vec_extract_v4sf_mem): Add TARGET_SSE insn constraint.
	* config/i386/i386.c (legitimize_tls_address): Change REG_EQIV
	notes to REG_EQUAL.

2011-08-27  Uros Bizjak  <ubizjak@gmail.com>

	PR target/50202
	* config/i386/sse.md (sse4_2_pcmpestr): Emit NOTE_INSN_DELETED note
	when all outputs are unused.
	(sse4_2_pcmpistr): Ditto.

2011-08-26  Jakub Jelinek  <jakub@redhat.com>

	PR c/50179
	* c-typeck.c (c_process_expr_stmt): Skip over nops and
	call mark_exp_read even if exprv is ADDR_EXPR.
