@@ -1,3 +1,11 @@
+2011-09-08  Eric Botcazou  <ebotcazou@adacore.com>
+	    Iain Sandoe  <iains@gcc.gnu.org>
+
+	Backport from mainline (restore powerpc-darwin Ada bootstrap).
+	* config/rs6000/rs6000.c (compute_save_world_info): Test
+	cfun->has_nonlocal_label to determine if the out-of-line save
+	world call may be used.
+
 2011-09-08  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/50310
